# mcp-jupyter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit.md  auth.md  data-handling.md  good-first-issues.md  install.md  killer-demo.md  launch.md  privacy.md  roadmap.md  standalone.md  tools.md
docs/recon/: competitive.md  jupyter-api.md
examples/: 01-attach-to-jupyterlab.md  02-standalone-mode.md  03-data-exploration.md  attach-to-jupyterlab.md  data-exploration.md  demo.py  killer-demo-transcript.md  run_killer_demo.py  standalone.md
src/mcp_jupyter_kernel/: __init__.py  auth.py  cli.py  config.py  install.py  server.py
src/mcp_jupyter_kernel/helpers/: __init__.py  bootstrap.py  redact.py
src/mcp_jupyter_kernel/jupyter/: __init__.py  client.py  nb.py  output.py  session.py  standalone.py
src/mcp_jupyter_kernel/tools/: __init__.py  cells.py  debug_.py  execute_.py  inspect_.py  kernel_.py  notebooks.py  plots.py
tests/: conftest.py  test_cli.py  test_install.py  test_introspection.py  test_server_build.py  test_server_integration.py  test_server_session.py  test_smoke.py  test_standalone.py
tests/fixtures/: sample_notebook.ipynb
