[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-jupyter-kernel"
version = "0.0.1"
description = "Kernel-aware MCP server for Jupyter notebooks. Your agent sees the variables, not just the .ipynb JSON."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
authors = [{ name = "mcp-jupyter-kernel contributors" }]
keywords = ["mcp", "jupyter", "notebook", "kernel", "llm", "claude", "agents", "introspection"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=0.2",
    "nbformat>=5.10",
    "jupyter_client>=8.6",
    "httpx>=0.27",
    "websockets>=12.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "jupyter_server>=2.14",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]
plot = [
    "kaleido>=0.2",  # plotly → PNG export
]
data = [
    "pandas>=2.2",   # not required, but tested against in inspect tool
    "numpy>=2.0",
]

[project.scripts]
mcp-jupyter-kernel = "mcp_jupyter_kernel.cli:app"

[project.urls]
Homepage = "https://github.com/mcp-jupyter-kernel/mcp-jupyter-kernel"
Issues = "https://github.com/mcp-jupyter-kernel/mcp-jupyter-kernel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_jupyter_kernel"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures", "**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",  # line length, handled by formatter
    "B008",  # function calls in argument defaults — required by Typer
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
